<resources>
    <!--Shared -->
    <string name="app_name">Contacts</string>
    <string name="loading">Loading…</string>
    <string name="cnx_error">Connection error</string>

    <!--Main -->
    <string name="action_sort_dec">Sort By Z-A</string>
    <string name="action_sort_acc">Sort By A-Z</string>
    <string name="no_contacts">No contacts found.</string>

    <!--Details -->
    <string name="details_username">UserName</string>
    <string name="details_website">Website</string>
    <string name="details_address">Address</string>
    <string name="details_phone">Phone</string>
    <string name="no_contact_details">Nothing to show here.</string>

</resources>
